# Cub3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  cub3d
inc/: cub3d.h  map.h
input/: cub3d_map.cub  lava.cub  random_map.cub  random_map1.cub  test.txt  valid_map_small.cub  wolfenstein.cub
lib/libft/: Makefile  ft_lstdelone.c  ft_split.c  ft_strjoin.c  ft_strncmp.c  libft.h
lib/mlx/docs/: Textures.md
maps.cub/: bram.cub  has_three_elements_min_1.cub  has_three_elements_min_2.cub  has_three_elements_min_3.cub  huisjes.cub  invalid_direction.cub  jungle.cub  jungle2.cub  kawish.cub  kawish.cub.cub  map.cub  map2.cub  no_start_position.cub  nontex.cub  residential.cub  trip.cub
src/: check_input.c  cub3d.c  draw_floor_ceiling.c  draw_wall.c  exit_game.c  floor_and_ceiling_textures.c  hook.c  init_data.c  init_game.c  main.c  raycast.c  save_wall_textures.c  top_view.c  white_space_functions.c
src/error_management/: check_correct_values.c  check_cub_extension.c  check_elements.c  check_walls.c  check_width_height.c
src/graphics/: draw.c  draw_floor_ceiling.c  draw_wall.c  raycast.c  textures.c
src/key_hook/: hook.c  move.c  rotate.c
src/parser/: check_input.c  load_textures.c  parse_map.c  parse_map_utils.c  save_wall_textures.c
src/top_view/: Cub3d.code-workspace  data_init.c  draw.c  main.c  player_hook.c  utils.c
tests/: CMakeLists.txt  parse.cpp
